# quant

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
apps/: streamlit_app.py
configs/: default.yaml  universe.example.yaml
data/: sample_prices.csv
docs/: FINANCIAL_INDICATORS.md  FRONTEND_BACKEND_ARCHITECTURE.md  PROJECT_STRUCTURE.md
examples/: basic_workflow.py
src/quant_system/: __init__.py  cli.py  config.py  models.py  reporting.py  timeframe.py  visualization.py  workflows.py
src/quant_system/analysis/: __init__.py  alerts.py  compare.py  factors.py  indicators.py  performance.py  report.py
src/quant_system/backtest/: __init__.py  engine.py  optimize.py  portfolio.py
src/quant_system/data/: __init__.py  providers.py
src/quant_system/risk/: __init__.py  position.py
src/quant_system/strategies/: __init__.py  core.py
tests/: test_backtest.py  test_cache_and_validation.py  test_compare_alerts_optimize.py  test_data_provider.py  test_indicators.py  test_portfolio.py  test_reporting.py  test_screen.py  test_visualization.py
